I have added flex-wrap: wrap; to the .cardsWrapper to fix the crypto-currency page not having all of the cards arrange in a grid

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,7 @@ button:hover {
 
 .cardsWrapper {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   width: auto;
   gap: 30px;
